# DictDataBase

./: .coverage  .gitignore  DictDataBase.code-workspace  LICENSE  README.md  benchmark_locking.py  bkg.pyproject.toml  cli.sh  justfile  profiler.py  profiling.prof  pyproject.toml  scenario_comparison.py  scene_random_writes.py  test.py  test_clocks.py  test_key_finder.py  test_parallel_runner.py  test_profiler.py  test_speed.py  test_tick_rate.py  testing_orm.py
.github/workflows/: learn-github-actions.yml  test.yml  testing.yml
DictDataBase/: __init__.py  config.py  locking.py  objects.py  utils.py
assets/: logo.afdesign
benchmarks/sqlite/: run.sh  test.py
dictdatabase/: __init__.py  byte_codes.py  config.py  configuration.py  dataclasses.py  file_meta.py  index_manager.py  indexing.py  io_bytes.py  io_safe.py  io_unsafe.py  locking.py  models.py  object_mapper.py  objects.py  reading.py  searching.py  session.py  sessions.py  utils.py  writing.py
dictdatabase/c_lib/: lib.c
testing/: __init__.py  run_tests.py  test_big_db.py  test_create.py  test_excepts.py  test_parallel_runner.py  test_partial.py  test_read_write.py  test_stress.py  utils.py
testing/benchmark/: run_parallel.py  run_threaded.py
tests/: __init__.py  conftest.py  test_at.py  test_create.py  test_delete.py  test_excepts.py  test_exists.py  test_glom_like_searching.py  test_glom_writing.py  test_indentation.py  test_indexer.py  test_io_bytes.py  test_io_safe.py  test_locking.py  test_object_mapper.py  test_parallel_crud.py  test_parallel_sessions.py  test_partial.py  test_read.py  test_select.py  test_threaded_sessions.py  test_utils.py  test_where.py  test_write.py  utils.py
tests/benchmark/: benchmark_locking.py  big_db.py  locking.py  parallel_appends.py  run_async.py  run_big_file.py  run_crud.py  run_parallel.py  run_parallel_multi.py  run_threaded.py  sequential_appends.py  utils.py
tests/benchmark/sqlite/: test.py  test_parallel_runner.py
tests/system_checks/: test_clocks.py  test_monotonic_over_threads.py  test_tick_rate.py
